--- a/src/components/post-list/post-list.css
+++ b/src/components/post-list/post-list.css
@@ -4,4 +4,9 @@
 .app-list .list-group-item {
   padding: 20px 35px 10px 35px;
   margin-top: 10px;
+  background-color: #333;
+  box-shadow: 6px 6px 20px rgba(255, 2555, 255, 0.12);
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
 }
