--- a/src/components/post-list-item/post-list-item.css
+++ b/src/components/post-list-item/post-list-item.css
@@ -14,7 +14,8 @@
     box-shadow: none;
     outline: none;
 }
-.app-list-item .btn-star {
+.app-list-item .btn-star,
+.app-list-item .btn-edit {
   color: #aeaeae;
   background: radial-gradient(592.44px at 74.69% 65.61%, #262832 0%, #1A1B1F 100%);
 }
@@ -61,4 +62,27 @@
   font-size: 16px;
   margin-right: 30px;
   color: #fff;
+}
+
+.edit-post-form {
+  margin: -45px 0 10px 0;
+  opacity: 0;
+  z-index: -1;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
+  position: relative;
+  display: flex;
+}
+
+.edit-post-form--show {
+  opacity: 1;
+  margin-top: 20px;
+  z-index: 1;
+}
+
+.edit-post-form .new-post-label {
+  margin-right: 5px;
 }
