lesson 4 fix arr or obj 2

--- a/src/components/search-panel/search-panel.css
+++ b/src/components/search-panel/search-panel.css
@@ -1,8 +1,4 @@
-.search-panel {
-  margin: 1rem 0;
-}
-
-.search-panel .search-input {
+.search-input {
   width: auto;
   flex-grow: 1;
   margin-right: 3px;
