--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
-  margin: 50px 0 0 0;
-  padding: 0;
+  padding: 50px 0 0 0;
+  min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -18,7 +18,6 @@ code {
 .form-control:focus {
   background-color: #333;
   color: #fff;
-  padding: 25px 20px;
 }
 
 .form-control::placeholder {
